Fix admin dashboard schema compatibility